--- a/businesses.html
+++ b/businesses.html
@@ -117,7 +117,7 @@
      
      <p>Our Job at Great Discount Place?</p>
      
-     <p>To provide motivational choices to the consumer, let them
+     <p class="great-pad">To provide motivational choices to the consumer, let them
      decide what and who they would like to experience and
      connect them to the merchants/retailers/businesses directly
      for real time interaction.</p>
