--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 			 The founder has a 20+ years experience and expertise in television and events business
 						under various organizations he founded.
 						
-						<p class="item-description">With reality based television programming “Jagoo India” for Star news channel to BTL
+						With reality based television programming “Jagoo India” for Star news channel to BTL
 						(below the line) events in the retail, education and the corporate sector the founder has
 						successfully gathered the best agencies in various states and brought them all on a
 						strategic network of associates for successful Urban and Rural India event solution
