--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>hhe</title>
 
-	<meta name="description" content="Heera HTML5 Template by Jewel Theme" >
+	<meta name="description" content="sociomaniacs" >
 
 	<meta name="author" content="Jewel Theme">
 
